off-center fix

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -102,7 +102,7 @@
     width: 100%;
   }
   .details ul{
-    align-items: center;
+    /* align-items: center; */
   }
   .details ul li{
     color: white;
@@ -116,6 +116,12 @@
   .contact-button{
     width: auto;
     padding: 12px 24px;
+  }
+  .det-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
 
